--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'QRCodeHOU' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
+
   target 'QRCodeHOUTests' do
     inherit! :complete
     # Pods for testing
