--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.1.2",
+    "fbjs": "^3.0.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-camera": "^4.2.1"
+    "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
